# PCWannier

./: .gitignore  README.md  README.zh.md  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
examples/: E.txt  M.txt  M0.txt  Test.mphtxt  U.txt  V.txt  epsilon.txt  hopping.txt  incar  test.txt
pcwannier/: __init__.py  _version.py  cli.py  config.py  conventions.py  data.py  logging_utils.py  matrix_io.py  maxwell.py  outputs.py  runtime_info.py  timing.py
pcwannier/compute/: __init__.py  backend.py  context.py  gradient.py  initializer.py  integration.py  kspace.py  matrix.py  numba_kernels.py  parallel.py  runner.py  state.py  tba.py  threading.py  topology.py  wannier.py
pcwannier/sources/: __init__.py  base.py  comsol.py
pcwannier/symmetries/: __init__.py  c4v.yaml
pcwannier/symmetry/: __init__.py  analysis.py  bloch.py  cache.py  definition.py  disentanglement.py  field_action.py  gauge.py  group.py  io.py  localization.py  reporting.py  representation.py  sewing.py  specs.py  stars.py  tables.py  twisted.py  (+1 more)
scripts/: benchmark.py  build_nuitka.ps1  build_pyinstaller.ps1  pyinstaller_entry.py
tests/: conftest.py  symmetry_models.py  test_build_scripts.py  test_cli.py  test_compute.py  test_config.py  test_incar_parser.py  test_integrate.py  test_matrix_io.py  test_mesh_data.py  test_sources.py  test_state_initializer.py  test_symmetry.py  test_symmetry_analysis.py  test_symmetry_config_layers.py  test_symmetry_database.py  test_symmetry_disentanglement.py  test_symmetry_gauge.py  test_symmetry_localization.py  test_symmetry_magnetic.py  test_symmetry_twisted.py  test_topology.py  test_utils.py  test_v0_consistency.py
(+50 files in other folders)
